5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1835_2221.log
== TEST (2019-07-02 16:31:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for in in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = sum(min(m[i,j]))/size(min(m[i,j]))
print(a)
-- ERROR:
File "XXXX", line 4
    for in in range(m.shape[0]):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = sum(min(m[i,j]))/size(min(m[i,j]))
print(a)
-- ERROR:
File "XXXX", line 4
    for i in in range(m.shape[0]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = sum(min(m[i,j]))/size(min(m[i,j]))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = m[i,j]
a = sum(a)/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = a + m[i,j]
a = sum(a)/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = a - m[i,j]
a = sum(a)/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = a + m[i,j]
a = sum(a)/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = sum(m[i,j])
a = a/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	if (m[i,j] == min(m[i])):
		a = sum(m[i,j])
a = a/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = m[i,j]
			a = sum(m[i,j])
a = a/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = m[i,j]
			a = sum(m[i,j])
a = a/m.shape[0]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			a = m[i,j]
			a = sum(m[i,j])
a = a/size(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = m[i,j]
a = sum(v)/size(v)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = v[i] + m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:42:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = v[i] + m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- EXECUTION TIME:
1.11267
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = ones(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = v[i] + m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = v[i] + m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=float)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = v[i] + m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:43:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=float)
for i in range(m.shape[0]):
	for j in range(4):
		if (m[i,j] == min(m[i])):
			v[i] = v[i] + m[i,j]
a = sum(v)/size(v)
print(round(a,2))
-- EXECUTION TIME:
1.05003
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
